styles/globals.css
/* purgecss start ignore */
@tailwind base;
@tailwind components;
/* purgecss end ignore */
@tailwind utilities;

@layer base {
  @font-face {
    font-display: swap;
    font-family: "Plex";
    font-weight: 400;
    src: url("../public/fonts/IBMPlexSans-Regular.ttf") format("truetype");
  }
  @font-face {
    font-display: swap;
    font-family: "Plex";
    font-weight: 700;
    src: url("../public/fonts/IBMPlexSans-Bold.ttf") format("truetype");
  }
  @font-face {
    font-display: swap;
    font-family: "Plex Mono";
    font-weight: 400;
    src: url("../public/fonts/IBMPlexMono-Regular.ttf") format("truetype");
  }
  @font-face {
    font-display: swap;
    font-family: "Plex Mono";
    font-style: italic;
    font-weight: 400;
    src: url("../public/fonts/IBMPlexMono-Italic.ttf") format("truetype");
  }
}

html,
body {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  @apply text-black;
  background-color: #ffffff;
  background-image: url("../public/img/background.jpg");
  background-position: 57% 49%;
  background-size: cover;
  margin: 0;
  min-height: calc(100vh - 1.5rem);
  padding: 0;
}

.background-banner {
  background-image: url("../public/img/background.jpg");
  background-position: bottom;
  background-size: cover;
}

.banner-text {
  mix-blend-mode: multiply;
}

.cursor {
  background: radial-gradient(
    circle,
    rgb(255, 255, 174) 0%,
    rgba(255, 255, 255, 0) 60%
  );
  width: 24.25rem;
  height: 24.25rem;
  border-radius: 50%;
  position: fixed;
  transform: translate(-50%, -50%);
  pointer-events: none;
  z-index: 20;
  transition: opacity ease 0.15s, transform ease 0.15s, left ease-out 0.15s,
    top ease-out 0.15s;
}

.cursor--hidden {
  opacity: 0;
}

.cursor--link-hovered {
  transform: translate(-50%, -50%) scale(1.25);
}

.cursor--clicked {
  transform: translate(-50%, -50%) scale(0.9);
}

.scroll-words {
  position: absolute;
  top: 0;
  opacity: 0;
  @apply h-full;
  @apply justify-center;
  @apply w-32;
}

.scroll-words:nth-child(1) {
  animation: scroll-word 42s 0s infinite linear;
  -webkit-animation: scroll-word 42s 0s infinite linear;
}

.scroll-words:nth-child(2) {
  animation: scroll-word 42s 6s infinite linear;
  -webkit-animation: scroll-word 42s 6s infinite linear;
}

.scroll-words:nth-child(3) {
  animation: scroll-word 42s 12s infinite linear;
  -webkit-animation: scroll-word 42s 12s infinite linear;
}

.scroll-words:nth-child(4) {
  animation: scroll-word 42s 18s infinite linear;
  -webkit-animation: scroll-word 42s 18s infinite linear;
}

.scroll-words:nth-child(5) {
  animation: scroll-word 42s 24s infinite linear;
  -webkit-animation: scroll-word 42s 24s infinite linear;
}

.scroll-words:nth-child(6) {
  animation: scroll-word 42s 30s infinite linear;
  -webkit-animation: scroll-word 42s 30s infinite linear;
}

.scroll-words:nth-child(7) {
  animation: scroll-word 42s 36s infinite linear;
  -webkit-animation: scroll-word 42s 36s infinite linear;
}

@keyframes scroll-word {
  0% {
    opacity: 0;
  }
  2% {
    opacity: 1;
  }
  10% {
    opacity: 1;
  }
  12% {
    opacity: 0;
  }
  100% {
    opacity: 0;
  }
}

.speakers-grid::before,
.schedule-grid::before {
  content: "";
  @apply bg-black;
  display: block;
  position: absolute;
  height: 1px;
  margin-bottom: 5px;
  top: 0;
  width: 100%;
  transition-duration: 0.25s;
  transition-property: transform;
  transform-origin: top;
  transform: scaleY(1);
}

.speakers-grid,
.schedule-grid {
  position: relative;
}

.speakers-grid:hover::before,
.schedule-grid:hover::before {
  transform: scaleY(6);
}

.summaryWrap {
  list-style-type: none;
}

.textWrap {
  list-style-type: none;
}

.textWrap::after {
  content: "…\00a0\00a0Read\00a0\00a0More";
  @apply text-base;
  @apply font-sans;
  @apply text-sm;
  margin-left: 0.5rem;
  text-transform: uppercase;
}

details[open] summary .event .speakers-grid-arrows .closed-arrow {
  display: block;
}

details[open] summary .event .speakers-grid-arrows .open-arrow {
  display: none;
}

.speakers-grid details[open] .textWrap::after {
  content: "";
}

.slam-bio details[open] .textWrap::after {
  content: "";
}

details summary {
  list-style-type: none;
} /* Firefox */
details summary::-webkit-details-marker {
  display: none;
} /* Chrome */
details summary::marker {
  display: none;
}

.schedule-image img,
.schedule-image-rachel img {
  height: 21rem;
  width: 21rem;
}

.publication-images,
.poetry-luxury-images,
.dreamscape-images,
.home-images,
.latinext-images,
.locals-images,
.rappers-images,
.halal-images,
.art-life-images {
  background-size: contain;
  background-position: 50% 50%;
  background-repeat: no-repeat;
  height: 21rem;
  width: 21rem;
}

.publication-images {
  -webkit-animation: publicationImageTransition 12s infinite;
  animation: publicationImageTransition 12s infinite;
  -webkit-animation-timing-function: steps(1, end);
  animation-timing-function: steps(1, end);
}

@keyframes publicationImageTransition {
  0% {
    background-image: url("../public/img/speakers/kristina-marie-darling.jpg");
  }
  25% {
    background-image: url("../public/img/speakers/ryan-murphy.jpg");
  }
  50% {
    background-image: url("../public/img/speakers/george-abraham.jpg");
  }
  75% {
    background-image: url("../public/img/speakers/lillian-yvonne-bertram.jpg");
  }
  100% {
    background-image: url("../public/img/speakers/kristina-marie-darling.jpg");
  }
}

.poetry-luxury-images {
  -webkit-animation: poetryImageTransition 8s infinite;
  animation: poetryImageTransition 8s infinite;
  -webkit-animation-timing-function: steps(1, end);
  animation-timing-function: steps(1, end);
}

@keyframes poetryImageTransition {
  0% {
    background-image: url("../public/img/speakers/janice-lobo-sapigao.jpg");
  }
  50% {
    background-image: url("../public/img/speakers/angelo-geter.jpg");
  }
  100% {
    background-image: url("../public/img/speakers/janice-lobo-sapigao.jpg");
  }
}

.dreamscape-images {
  -webkit-animation: dreamscapeImageTransition 16s infinite;
  animation: dreamscapeImageTransition 16s infinite;
  -webkit-animation-timing-function: steps(1, end);
  animation-timing-function: steps(1, end);
}

@keyframes dreamscapeImageTransition {
  0% {
    background-image: url("../public/img/speakers/kai-grant.jpg");
  }
  16.7% {
    background-image: url("../public/img/speakers/tariq-charles.jpg");
  }
  33.4% {
    background-image: url("../public/img/speakers/stephen-hamilton.jpg");
  }
  50.1% {
    background-image: url("../public/img/speakers/marisa-luse.jpg");
  }
  66.8% {
    background-image: url("../public/img/speakers/ekua-holmes.jpeg");
  }
  83.5% {
    background-image: url("../public/img/speakers/karilyn-crockett.jpg");
  }
  100% {
    background-image: url("../public/img/speakers/kai-grant.jpg");
  }
}

.home-images {
  -webkit-animation: homeImageTransition 8s infinite;
  animation: homeImageTransition 8s infinite;
  -webkit-animation-timing-function: steps(1, end);
  animation-timing-function: steps(1, end);
}

@keyframes homeImageTransition {
  0% {
    background-image: url("../public/img/speakers/safia-elhillo.jpg");
  }
  50% {
    background-image: url("../public/img/speakers/asiyah-herrera.jpg");
  }
  100% {
    background-image: url("../public/img/speakers/safia-elhillo.jpg");
  }
}

.latinext-images {
  -webkit-animation: latinextImageTransition 12s infinite;
  animation: latinextImageTransition 12s infinite;
  -webkit-animation-timing-function: steps(1, end);
  animation-timing-function: steps(1, end);
}

@keyframes latinextImageTransition {
  0% {
    background-image: url("../public/img/speakers/diannely-antigua.jpg");
  }
  33% {
    background-image: url("../public/img/speakers/malcolm-friend.jpg");
  }
  66% {
    background-image: url("../public/img/speakers/jonathan-mendoza.jpg");
  }
  100% {
    background-image: url("../public/img/speakers/diannely-antigua.jpg");
  }
}

.locals-images {
  -webkit-animation: localsImageTransition 16s infinite;
  animation: localsImageTransition 16s infinite;
  -webkit-animation-timing-function: steps(1, end);
  animation-timing-function: steps(1, end);
}

@keyframes localsImageTransition {
  0% {
    background-image: url("../public/img/speakers/askia-toure.jpg");
  }
  25% {
    background-image: url("../public/img/speakers/letta-neely.jpg");
  }
  50% {
    background-image: url("../public/img/speakers/martha-collins.jpg");
  }
  75% {
    background-image: url("../public/img/speakers/toni-bee.jpg");
  }
  100% {
    background-image: url("../public/img/speakers/askia-toure.jpg");
  }
}

.rappers-images {
  -webkit-animation: rappersImageTransition 8s infinite;
  animation: rappersImageTransition 8s infinite;
  -webkit-animation-timing-function: steps(1, end);
  animation-timing-function: steps(1, end);
}

@keyframes rappersImageTransition {
  0% {
    background-image: url("../public/img/speakers/candace-mcduffie.jpg");
  }
  50% {
    background-image: url("../public/img/speakers/ashley-rose.jpg");
  }
  100% {
    background-image: url("../public/img/speakers/candace-mcduffie.jpg");
  }
}

.halal-images {
  -webkit-animation: halalImmageTransition 12s infinite;
  animation: halalImmageTransition 12s infinite;
  -webkit-animation-timing-function: steps(1, end);
  animation-timing-function: steps(1, end);
}

@keyframes halalImmageTransition {
  0% {
    background-image: url("../public/img/speakers/seema-yasmin.jpg");
  }
  33% {
    background-image: url("../public/img/speakers/nikia-chaney.jpg");
  }
  66% {
    background-image: url("../public/img/speakers/yasmin-belkhyr.jpg");
  }
  100% {
    background-image: url("../public/img/speakers/seema-yasmin.jpg");
  }
}

.art-life-images {
  -webkit-animation: artLifeImmageTransition 8s infinite;
  animation: artLifeImmageTransition 8s infinite;
  -webkit-animation-timing-function: steps(1, end);
  animation-timing-function: steps(1, end);
}

@keyframes artLifeImmageTransition {
  0% {
    background-image: url("../public/img/speakers/nina-lanegra.jpg");
  }
  50% {
    background-image: url("../public/img/speakers/fulani-haynes.jpg");
  }
  100% {
    background-image: url("../public/img/speakers/nina-lanegra.jpg");
  }
}

@screen md {
  /* .hero {
    height: calc(100vh - 1.5rem);
  } */

  .footer-top::before {
    content: "";
    @apply bg-black;
    @apply mx-auto;
    display: block;
    height: 1px;
    max-width: 77rem;
    position: absolute;
    top: 0;
    width: 100%;
    margin-right: 1.5rem;
  }

  .schedule-image img,
  .schedule-image-rachel img,
  .publication-images,
  .poetry-luxury-images,
  .dreamscape-images,
  .home-images,
  .latinext-images,
  .locals-images,
  .rappers-images,
  .halal-images,
  .art-life-images {
    height: 21rem;
    width: 21rem;
  }
}

@screen lg {
  .summaryDetail {
    margin-left: 33vw;
  }

  .schedule-image img,
  .schedule-image-rachel img,
  .publication-images,
  .poetry-luxury-images,
  .home-images,
  .dreamscape-images,
  .latinext-images,
  .locals-images,
  .rappers-images,
  .halal-images,
  .art-life-images {
    height: 18.25rem;
    width: 18.25rem;
  }
}

@screen xl {
  .summaryDetail {
    margin-left: 0;
  }

  .schedule-image img,
  .publication-images,
  .poetry-luxury-images,
  .dreamscape-images,
  .latinext-images,
  .locals-images,
  .rappers-images,
  .halal-images,
  .art-life-images {
    height: 15.5rem;
    width: 15.5rem;
  }

  .schedule-image-rachel img,
  .home-images {
    height: 22.75rem;
    width: 22.75rem;
  }
}

